--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.12.12",
     "node-ts": "^6.0.1",
     "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
