--- a/package.json
+++ b/package.json
@@ -20,19 +20,25 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
     "joi": "^17.13.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.8"
+    "mysql2": "^3.9.8",
+    "node": "^23.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
+    "@types/dotenv": "^8.2.3",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.12.12",
+    "@types/node": "^22.10.2",
+    "@types/swagger-jsdoc": "^6.0.4",
     "node-ts": "^6.0.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
